# kiwipy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  MIT  README.md  README.rst  codecov.yml  pyproject.toml  release.sh  requirements.txt  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
docs/: Makefile  make.bat
docs/source/: apidoc.rst  concepts.rst  conf.py  examples.rst  index.rst  installation.rst  nitpick-exceptions  paper.bib  paper.md  performance.rst  pika-comparison.rst  user.rst
docs/source/apidoc/: modules.rst  plum.engine.rst  plum.rst
docs/source/examples/: broadcast.ipynb  rpc.ipynb  tasks.ipynb
docs/source/examples/kiwipy/: emit_log_topic.py  new_task.py  receive_logs_topic.py  rpc_client.py  rpc_server.py  worker.py
docs/source/examples/pika/: emit_log_topic.py  new_task.py  receive_logs_topic.py  rpc_client.py  rpc_server.py  worker.py
examples/: rmq_broadcast_client.py  rmq_broadcast_server.py  rmq_new_task.py  rmq_rpc_client.py  rmq_rpc_server.py  rmq_worker.py
kiwi/: __init__.py  communications.py  futures.py  local.py  utils.py  version.py
kiwi/rmq/: __init__.py  communicator.py  defaults.py  loop.py  messages.py  pubsub.py  task.py  utils.py
kiwipy/: __init__.py  communicate.py  communications.py  exceptions.py  filters.py  futures.py  local.py  types.py  utils.py  version.py
kiwipy/rmq/: __init__.py  aiothreads.py  communicator.py  defaults.py  loops.py  messages.py  pubsub.py  tasks.py  threadcomms.py  utils.py
src/kiwipy/: __init__.py  communicate.py  exceptions.py  filters.py  futures.py  utils.py
src/kiwipy/rmq/: __init__.py  communicator.py  defaults.py  messages.py  tasks.py  threadcomms.py  utils.py
test/: __init__.py  pytest.ini  test_communications.py  test_local.py  utils.py
test/rmq/: conftest.py  docker-compose.yml  jupyter-test.ipynb  jupyter-test.py  test_communicator.py  test_coroutine_communicator.py  test_futures.py  test_launch.py  test_rmq_thread_communicator.py  test_tasks.py  utils.py
test/rmq/bench/: conftest.py  support.py  test_benchmarks.py
